# sideratask

./: Cargo.toml  LICENSE  README.md
output/: .gitignore
src/: generator.rs  loader.rs  main.rs  task.rs
