[package]
name = "cleaning-list"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
fnv = "1.0.7"
rand = "0.10.1"
rand_chacha = "0.10.0"
regex = "1.12.3"
reqwest = { version = "0.13.3", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
